--- a/townhallaction.html
+++ b/townhallaction.html
@@ -44,7 +44,7 @@
   <body>
    <div class="container-fluid">
     <div class="row" style="background-color: #F15A29;">      
-      <div class="col-xs-offset-2 col-xs-8 col-md-6" style="border: 2px solid #B72B21; border-radius: 1px; margin: 8px; padding: 5px 5px 5px 10px;">
+      <div class="col-xs-offset-2 col-xs-8 col-md-6" style="border: 2px solid #B72B21; border-radius: 1px;">
               <h3 class="" style="color: #fff;">BE READY - join the Rapid Response team.</h3>
 
         <div id="regform">
