--- a/townhallaction.html
+++ b/townhallaction.html
@@ -23,7 +23,8 @@
         font-family: 'Open Sans';
         font-size: 12pt;
         width: 100%;
-       margin: 0%;    
+       margin: 0%;
+       background-color: #F15A29;    
       }
 
        </style>
@@ -43,8 +44,8 @@
   </head>
   <body>
    <div class="container-fluid">
-    <div class="row" style="background-color: #F15A29;">      
-      <div class="col-xs-offset-2 col-xs-8 col-md-6" style="border: 2px solid #B72B21; border-radius: 1px;">
+    <div class="row" style="">      
+      <div class="col-xs-offset-1 col-xs-10 col-md-6" style="border: 2px solid #B72B21; border-radius: 1px;">
               <h3 class="" style="color: #fff;">BE READY - join the Rapid Response team.</h3>
 
         <div id="regform">
@@ -83,7 +84,7 @@
        <div class="col-xs-offset-2 col-xs-8 col-md-6">
         <h3 class="" style="color: #fff;">SIGN UP NOW</h3>
         <p style="color: #fff;">
-          Still months away from the 2017 Texas legislative session, politicians are already attacking abortion access from new angles. The Rapid Response team will let them know that whenever they move to restrict or regulate abortion, we'll be there and be loud.
+          Still months away from the 2017 Texas legislative session, politicians are already attacking abortion access from new angles.<br>The Rapid Response team will let them know that whenever they move to restrict or regulate abortion, we'll be there and be loud.
         </p>
       </div>
 
