--- a/townhallaction.html
+++ b/townhallaction.html
@@ -45,7 +45,7 @@
   <body>
    <div class="container-fluid">
     <div class="row" style="">      
-      <div class="col-xs-offset-1 col-xs-10 col-md-6" style="border: 2px solid #B72B21; border-radius: 1px;">
+      <div class="col-xs-offset-1 col-xs-10 col-md-6" style="padding-top: 15px; border: 2px solid #B72B21; border-radius: 1px;">
               <h3 class="" style="color: #fff;">BE READY - join the Rapid Response team.</h3>
 
         <div id="regform">
