--- a/townhallaction.html
+++ b/townhallaction.html
@@ -45,7 +45,7 @@
   <body>
    <div class="container-fluid">
     <div class="row" style="">      
-      <div class="col-xs-offset-1 col-xs-10 col-md-6" style="padding-top: 15px; border: 2px solid #B72B21; border-radius: 1px;">
+      <div class="col-xs-offset-1 col-xs-10 col-md-6" style="margin-top: 15px; border: 2px solid #B72B21; border-radius: 1px;">
               <h3 class="" style="color: #fff;">BE READY - join the Rapid Response team.</h3>
 
         <div id="regform">
@@ -81,7 +81,7 @@
         </div>
        </div>
     
-       <div class="col-xs-offset-2 col-xs-8 col-md-6">
+       <div class="col-xs-12 col-md-6">
         <h3 class="" style="color: #fff;">SIGN UP NOW</h3>
         <p style="color: #fff;">
           Still months away from the 2017 Texas legislative session, politicians are already attacking abortion access from new angles.<br>The Rapid Response team will let them know that whenever they move to restrict or regulate abortion, we'll be there and be loud.
