--- a/townhallaction.html
+++ b/townhallaction.html
@@ -45,7 +45,7 @@
   <body>
    <div class="container-fluid">
     <div class="row" style="">      
-      <div class="col-xs-offset-1 col-xs-10 col-md-6" style="margin-top: 15px; border: 2px solid #B72B21; border-radius: 1px;">
+      <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8" style="margin-top: 15px; border: 2px solid #B72B21; border-radius: 1px;">
               <h3 class="" style="color: #fff;">BE READY - join the Rapid Response team.</h3>
 
         <div id="regform">
@@ -66,7 +66,7 @@
               </div>
 
               <div class="form-group row">
-              <div class="col-xs-10 col-sm-4"><input type="text" class="form-control" name="cons_zip_code" id="cons_zip_code" placeholder="Zip code" ></div>
+              <div class="col-xs-10 col-sm-offset-3 col-sm-6"><input type="text" class="form-control" name="cons_zip_code" id="cons_zip_code" placeholder="Zip code" ></div>
               </div>
               
                     <span class="hidden"><label for="denySubmit">Spam Control Text:</label>&nbsp;
