--- a/townhallaction.html
+++ b/townhallaction.html
@@ -66,7 +66,7 @@
               </div>
 
               <div class="form-group row">
-              <div class="col-xs-10 col-sm-offset-3 col-sm-6"><input type="text" class="form-control" name="cons_zip_code" id="cons_zip_code" placeholder="Zip code" ></div>
+              <div class="col-xs-10 col-sm-4"><input type="text" class="form-control" name="cons_zip_code" id="cons_zip_code" placeholder="Zip code" ></div>
               </div>
               
                     <span class="hidden"><label for="denySubmit">Spam Control Text:</label>&nbsp;
@@ -81,7 +81,7 @@
         </div>
        </div>
     
-       <div class="col-xs-12 col-md-6">
+       <div class="col-xs-12 col-sm-offset-3 col-sm-6">
         <h3 class="" style="color: #fff;">SIGN UP NOW</h3>
         <p style="color: #fff;">
           Still months away from the 2017 Texas legislative session, politicians are already attacking abortion access from new angles.<br>The Rapid Response team will let them know that whenever they move to restrict or regulate abortion, we'll be there and be loud.
