--- a/townhallaction.html
+++ b/townhallaction.html
@@ -72,7 +72,7 @@
                     <span class="hidden"><label for="denySubmit">Spam Control Text:</label>&nbsp;
                       <input type="text" name="denySubmit" id="denySubmit" value="" alt="This field is used to prevent form submission by scripts." />&nbsp;Please leave this field empty</span>
 
-             <input type="hidden" name="survey_id" id="survey_id" value="4824" />
+             <input type="hidden" name="survey_id" id="survey_id" value="" />
 
               <div class="form-group row text-center">
                 <button class="btn btn-md btn-info center-block" type="submit" />Add your name</button>
