--- a/townhallaction.html
+++ b/townhallaction.html
@@ -63,6 +63,7 @@
               <div class="form-group row">
                 <label></label>
                 <div class="col-xs-10 col-sm-7"><input class="form-control center-block" type="text" name="cons_email" id="cons_email" placeholder="Email" maxlength="255" required /></div>
+                 <div class="col-xs-10 col-sm-7"><input class="form-control center-block" type="text" name="cons_phone" id="cons_phone" placeholder="Cell phone" maxlength="255" required /></div>
               </div>
 
               <div class="form-group row">
